# DreamWeaverComfy

./: .gitignore  HANDOFF.md  README.md  ai.wintrip.Dreamweaver.yml  api.js  index.html  main.js  package-lock.json  package.json  server.py  state.js  storage.js  styles.css
scripts/: ai.wintrip.Dreamweaver.desktop  build-flatpak.sh  build-tauri.sh  dreamweaver-comfy  launch-desktop.sh  prepare-tauri-assets.sh  run-dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: background.js  dream-player.js  history-view.js  toast-view.js
