[package]
name = "dreamweaver-comfy"
version = "0.2.9"
description = "Dreamweaver Comfy comic and dream desktop shell"
authors = ["WintripAI"]
edition = "2021"

[lib]
name = "dreamweaver_comfy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
